ingress-cert-manager/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: adeyeletechhub.com.ng
    http:
      paths:
      - path: /front-end
        pathType: Prefix
        backend:
          service:
            name: front-end
            port:
              number: 80
      - path: /carts
        pathType: Prefix
        backend:
          service:
            name: carts
            port:
              number: 80
